Fixing Madness Guy Alignment

--- a/BowlPoolManager.Client/Layout/NavMenu.razor.css
+++ b/BowlPoolManager.Client/Layout/NavMenu.razor.css
@@ -3,7 +3,7 @@
 }
 
 .top-row {
-    height: 3.5rem;
+    height: 5rem;
     /* Match Flatly Sidebar Color */
     background-color: #2c3e50;
 }
